--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ h5 {
     background-size: contain;
     left: 50%;
     margin-left: -200px;
-    top: 50%;
+    top: 53%;
     background-position: center center;
     margin-top: -200px;
 }
@@ -315,14 +315,14 @@ footer img {
 
 @media only screen and (max-width: 538px) {
     .face-shape{
-        height: 300px;
+        height: 100%;
         margin-top: -150px;
     }
 }
 
 @media only screen and (max-width: 425px) {
     .face-shape {
-        height: 220px;
+        height: 100%;
         margin-top: -110px;
     }
     .guide-list li{
